# MathModelingAgents

./: .env.example  .gitignore  CLAUDE.md  MODEL_CONFIG_PROPOSAL.md  README.md  UNRESOLVED.md  main.py  pyproject.toml  run_layer3_resume.py
mathmodelingagents/: __init__.py  default_config.py  reporting.py
mathmodelingagents/agents/: __init__.py
mathmodelingagents/agents/utils/: __init__.py  agent_states.py  prompt_templates.py
mathmodelingagents/graph/: __init__.py  conditional_logic.py  modeling_graph.py  propagation.py  setup.py
mathmodelingagents/llm_clients/: __init__.py  factory.py
mathmodelingagents/tools/: __init__.py
tests/: test_api_connectivity.py  test_font_detection.py  test_layer3_layer4.py
