[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mathmodelingagents"
version = "0.1.0"
description = "MathModelingAgents: Multi-Agent LLM Mathematical Modeling Competition Framework"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langgraph>=0.4.8",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "pandas>=2.3.0",
    "numpy>=1.26",
    "scipy>=1.12",
    "sympy>=1.12",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "scikit-learn>=1.4",
    "python-dotenv>=1.0.0",
    "requests>=2.32.4",
    "typing-extensions>=4.14.0",
    "rich>=14.0.0",
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.15",
    "pytest>=8.0",
    "pytest-subtests>=0.13",
]

[project.scripts]
mathmodeling = "mathmodelingagents.main:main"
