[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mathmodelingagents"
version = "0.2.0"
description = "Multi-Agent LLM Mathematical Modeling Competition Framework — input a problem, output a complete paper"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # ── LLM orchestration ──
    "langgraph>=0.4.8",
    "langchain-openai>=0.3.0",
    "langchain-core>=0.3.0",

    # ── Data science (sandbox execution) ──
    "numpy>=1.26",
    "scipy>=1.12",
    "sympy>=1.12",
    "pandas>=2.3.0",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "scikit-learn>=1.4",
    "statsmodels>=0.14",

    # ── Configuration & utilities ──
    "python-dotenv>=1.0.0",
    "typing-extensions>=4.14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-subtests>=0.13",
    "ruff>=0.15",
]

[project.scripts]
mathmodeling = "main:main"
